--- a/app/src/main/res/layout/activity_screen_three.xml
+++ b/app/src/main/res/layout/activity_screen_three.xml
@@ -11,25 +11,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/imageview"
         android:layout_centerHorizontal="true" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageview"
-        android:src="@drawable/mapshort"
-        android:layout_above="@+id/analogClock"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:src="@drawable/map"
+        android:layout_above="@+id/textView5" />
 
     <AnalogClock
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/analogClock"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_alignTop="@+id/textView5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/imageview"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5"
+        android:layout_marginRight="66dp"
+        android:layout_marginEnd="66dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,10 +36,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Store hours:\nMon 09:00AM - 05:00PM \nTue 09:00AM - 05:00PM \nWed 09:00AM - 05:00PM \nThu 09:00AM - 05:00PM \nFri 09:00AM - 05:00PM \nSat 12:00PM - 07:00PM \nSun Closed"
         android:id="@+id/textView5"
-        android:layout_marginBottom="40dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginLeft="66dp"
+        android:layout_marginStart="66dp" />
+
 
 
 </RelativeLayout>
